--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,9 +5,13 @@ import { SITE_TITLE } from '../consts';
 
 <header>
 	<nav>
-		<h2><a href="/">{SITE_TITLE}</a></h2>
+		<div>
+			<a href="/">
+				<img src="logo.svg" width="100" height="100" class="logo-link" />
+			</a>
+		</div>
+		<!-- <h2><a href="/">{SITE_TITLE}</a></h2> -->
 		<div class="internal-links">
-			<HeaderLink href="/">Home</HeaderLink>
 			<HeaderLink href="/blog">Blog</HeaderLink>
 			<HeaderLink href="/about">About</HeaderLink>
 		</div>
@@ -46,8 +50,8 @@ import { SITE_TITLE } from '../consts';
 	header {
 		margin: 0;
 		padding: 0 1em;
-		background: white;
-		box-shadow: 0 2px 8px rgba(var(--black), 5%);
+		/* background: linear-gradient(var(--gray-gradient)) no-repeat; */
+		/* box-shadow: 0 2px 8px rgba(var(--black), 5%); */
 	}
 	h2 {
 		margin: 0;
@@ -81,5 +85,14 @@ import { SITE_TITLE } from '../consts';
 		.social-links {
 			display: none;
 		}
+	}
+
+	.logo-link {
+		display: inline-block;
+		transition: transform 0.3s ease-in-out;
+	}
+
+	.logo-link:hover {
+		transform: scale(1.1);
 	}
 </style>
