change: site under construction notes

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -88,7 +88,8 @@ const posts = (await getCollection('blog')).sort(
 	<body>
 		<Header />
 		<main>
-			<section>
+			<p>Website under construction...</p>
+			<!-- <section>
 				<ul>
 					{
 						posts.map((post) => (
@@ -104,7 +105,7 @@ const posts = (await getCollection('blog')).sort(
 						))
 					}
 				</ul>
-			</section>
+			</section> -->
 		</main>
 		<Footer />
 	</body>
